--- a/src/Dapr.Client.Grpc/Dapr.Client.Grpc.csproj
+++ b/src/Dapr.Client.Grpc/Dapr.Client.Grpc.csproj
@@ -10,8 +10,8 @@
     <Protobuf Include="Protos\daprclient.proto" GrpcServices="Client" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.10.0" />
-    <PackageReference Include="Grpc.Net.Client" Version="2.25.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.25.0" />
+    <PackageReference Include="Google.Protobuf" Version="3.11.2" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.25.0" PrivateAssets="All" />
+    <PackageReference Include="Grpc.Tools" Version="2.25.0" PrivateAssets="All" />
   </ItemGroup>
 </Project>
