--- a/samples/Grpc/GrpcClient/GrpcClient.csproj
+++ b/samples/Grpc/GrpcClient/GrpcClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,11 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.Net.Client" Version="2.25.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Dapr.Client.Grpc\Dapr.Client.Grpc.csproj" />
+    <ProjectReference Include="..\..\..\src\Dapr.Client.Grpc\Dapr.Client.Autogen.Grpc.csproj" />
   </ItemGroup>
 
 </Project>
