--- a/test/Dapr.Client.Test/Dapr.Client.Test.csproj
+++ b/test/Dapr.Client.Test/Dapr.Client.Test.csproj
@@ -17,6 +17,8 @@
 
   <ItemGroup>
     <Compile Include="..\Shared\TestHttpClient.cs" />
+    <Compile Include="..\Shared\GrpcUtils.cs" />
+    <Compile Include="..\Shared\ProtobufUtils.cs" />
   </ItemGroup>
 
   <ItemGroup>
