--- a/src/Dapr.Client/Dapr.Client.csproj
+++ b/src/Dapr.Client/Dapr.Client.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Grpc.Net.Client" Version="2.27.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Dapr.Client.Grpc\Dapr.Client.Autogen.Grpc.csproj" />
+    <ProjectReference Include="..\Dapr.Client.Autogen.Grpc\Dapr.Client.Autogen.Grpc.csproj" />
   </ItemGroup>
   
 </Project>
