--- a/src/Dapr.Client/Dapr.Client.csproj
+++ b/src/Dapr.Client/Dapr.Client.csproj
@@ -8,5 +8,14 @@
   <PropertyGroup>
     <Description>This package contains the reference assemblies for developing services using Dapr.</Description>
   </PropertyGroup>
+  <ItemGroup>
+    <Protobuf Include="Protos\dapr.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos\daprclient.proto" GrpcServices="Client" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.11.4" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.27.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.27.0" PrivateAssets="All" />
+  </ItemGroup>  
   
 </Project>
