--- a/test/Dapr.Client.Test/Dapr.Client.Test.csproj
+++ b/test/Dapr.Client.Test/Dapr.Client.Test.csproj
@@ -5,6 +5,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
+    <PackageReference Include="Google.Protobuf" Version="3.11.4" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.27.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
@@ -15,6 +17,8 @@
 
   <ItemGroup>
     <Compile Include="..\Shared\TestHttpClient.cs" />
+    <Compile Include="..\Shared\GrpcUtils.cs" />
+    <Compile Include="..\Shared\ProtobufUtils.cs" />
   </ItemGroup>
 
   <ItemGroup>
