--- a/samples/AspNetCore/RoutingSample/Properties/launchSettings.json
+++ b/samples/AspNetCore/RoutingSample/Properties/launchSettings.json
@@ -13,7 +13,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "nativeDebugging": false
     },
     "RoutingSample": {
       "commandName": "Project",
