--- a/samples/AspNetCore/RoutingSample/RoutingSample.csproj
+++ b/samples/AspNetCore/RoutingSample/RoutingSample.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="5.33.1" />
   </ItemGroup>
 
 </Project>
