Updated dotet sdk to 3.1.301 (removing build error workaround) Generate .snupkg Upload packages for tags to nuget.org Enable sourcelink Enable Deterministic build for github actions

--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -26,13 +26,13 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.102
+          dotnet-version: 3.1.301
       - name: Build solution - release
         run: dotnet build all.sln --configuration release
       - name: Test solution - release
         run: dotnet test test/test.sln --configuration release
       - name: Generate Nuget Packages - release
-        run: dotnet pack src/prod.sln --configuration release --include-symbols --no-build
+        run: dotnet pack src/prod.sln --configuration release
       - name: upload artifacts
         uses: actions/upload-artifact@master
         with:
@@ -60,3 +60,7 @@ jobs:
             --name "Dapr dotnet SDK v${REL_VERSION}" \
             --prerelease true \
             ${RELEASE_ARTIFACT[*]}
+      - name: Publish nuget packages to nuget.org
+        if: startswith(github.ref, 'refs/tags/v')
+        run: |
+          dotnet nuget push ${{ env.NUPKG_OUTDIR }}/DApr*.nupkg --skip-duplicate --api-key ${{ secrets.NUGETORG_DAPR_API_KEY }} --source https://api.nuget.org/v3/index.json
