--- a/test/Dapr.Client.Test/Dapr.Client.Test.csproj
+++ b/test/Dapr.Client.Test/Dapr.Client.Test.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Google.Protobuf" Version="3.11.4" />
     <PackageReference Include="Grpc.Core.Testing" Version="2.31.0-pre1" />
     <PackageReference Include="Grpc.Net.Client" Version="2.27.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.27.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
@@ -17,10 +18,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Protobuf Include="Protos\test.proto" ProtoRoot="Protos" GrpcServices="Client" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Include="..\Shared\AppCallbackClient.cs" />
     <Compile Include="..\Shared\TestHttpClient.cs" />
     <Compile Include="..\Shared\GrpcUtils.cs" />
-    <Compile Include="..\Shared\ProtobufUtils.cs" />
   </ItemGroup>
 
   <ItemGroup>
