--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Publish binaries to github for tags
         if: startswith(github.ref, 'refs/tags/v')
         run: |
-          sudo npm install --silent --no-progress -g github-release-cli
+          sudo npm install --silent --no-progress -g github-release-cli@1.3.1
           
           # Parse repository to get owner and repo names
           OWNER_NAME="${GITHUB_REPOSITORY%%/*}"
