--- a/src/Dapr.Client/Dapr.Client.csproj
+++ b/src/Dapr.Client/Dapr.Client.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="Google.Protobuf" Version="3.13.0" />
         <PackageReference Include="Grpc.Net.Client" Version="2.32.0" />
         <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All" />
+        <PackageReference Include="Google.Api.CommonProtos" Version="2.2.0" />
     </ItemGroup>
     <ItemGroup>
         <Folder Include="Protos\" />
