--- a/test/Dapr.Client.Test/Dapr.Client.Test.csproj
+++ b/test/Dapr.Client.Test/Dapr.Client.Test.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="moq" Version="4.14.7" />
     <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.123" />      
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.8" />      
+    <PackageReference Include="Shouldly" Version="3.0.2" />      
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
