--- a/samples/Actor/ActorClient.FSharp/ActorClient.FSharp.fsproj
+++ b/samples/Actor/ActorClient.FSharp/ActorClient.FSharp.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +12,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IDemoActor.FSharp\IDemoActor.FSharp.fsproj" />
-    <ProjectReference Include="..\src\Dapr.Actors\Dapr.Actors.csproj" />
   </ItemGroup>
 
 </Project>
