--- a/samples/Actor/DemoActor.FSharp/DemoActor.FSharp.fsproj
+++ b/samples/Actor/DemoActor.FSharp/DemoActor.FSharp.fsproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Dapr.Actors.AspNetCore\Dapr.Actors.AspNetCore.csproj" />
     <ProjectReference Include="..\IDemoActor.FSharp\IDemoActor.FSharp.fsproj" />
-    <ProjectReference Include="..\src\Dapr.Actors.AspNetCore\Dapr.Actors.AspNetCore.csproj" />
   </ItemGroup>
 
 </Project>
