Remove extra .sln files and just use one
These are just extra maintenance. The root cause of this regression is
that we didn't add the tests to all of the right solutions. Life is
simpler if we just use one. The `dotnet` commands already do the right
thing.

--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -34,12 +34,12 @@ jobs:
       - name: Test solution - release
         run: |
           # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
-          dotnet test test/test.sln --configuration release /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:GITHUB_ACTIONS=false
+          dotnet test --configuration release /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:GITHUB_ACTIONS=false
           dotnet clean # remove the artifacts so they can be rebuild with deterministic builds enabled
       - name: Build solution - release
-        run: dotnet build all.sln --configuration release
+        run: dotnet build --configuration release
       - name: Generate Nuget Packages - release
-        run: dotnet pack src/prod.sln --configuration release
+        run: dotnet pack --configuration release
       - name: upload artifacts
         uses: actions/upload-artifact@master
         with:
