--- a/src/Dapr.Client/Dapr.Client.csproj
+++ b/src/Dapr.Client/Dapr.Client.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Grpc.Net.Client" Version="2.32.0" />
         <PackageReference Include="Grpc.Tools" Version="2.32.0" PrivateAssets="All" />
         <PackageReference Include="Google.Api.CommonProtos" Version="2.2.0" />
+        <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
     </ItemGroup>
     <ItemGroup>
         <Folder Include="Protos\" />
