Try without docker compose

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json.
 {
 	"name": "Dapr - .NET SDK",
-	"dockerComposeFile": "docker-compose.yml",
-	"service": "app",
-	"workspaceFolder": "/workspace",
+	"dockerFile": "Dockerfile",
 
 	// Use this environment variable if you need to bind mount your local source code into a new container.
 	"remoteEnv": {
